Remove the ability to set custom background and foreground colors. Reasons: - It was buggy (the recipientseditor, mimeparttree etc didn't obey to it) - It is already provided by the KDE colorscheme (unlike the other color options)

Also, the ApplicationPaletteChange event is no longer used, so listen to
PaletteChange events instead.

BUG:102906
BUG:167346

svn path=/trunk/KDE/kdepim/; revision=837712